--- a/src/styles/scss/_common.scss
+++ b/src/styles/scss/_common.scss
@@ -13,6 +13,7 @@ main
   padding: 0;
   margin: 0;
   font-family: 'Vazirmatn', sans-serif;
+  letter-spacing: normal !important;
 
 }
 
@@ -1105,4 +1106,9 @@ spaces
     text-align: left;
 
   }
+}
+
+.rtl {
+  direction: rtl;
+  text-align: right;
 }
