--- a/src/styles/scss/_common.scss
+++ b/src/styles/scss/_common.scss
@@ -1112,3 +1112,9 @@ spaces
   direction: rtl;
   text-align: right;
 }
+
+.mobile-hero {
+  @media screen and (max-width: 768px) {
+    margin-top: 100px;
+  }
+}
