add video to landing page

--- a/src/styles/scss/_common.scss
+++ b/src/styles/scss/_common.scss
@@ -1118,3 +1118,13 @@ spaces
     margin-top: 100px;
   }
 }
+
+.video-btn-wrapper {
+  //background-color: #ff9800;
+
+  padding: 20px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
