add video to landing page

--- a/src/styles/scss/_common.scss
+++ b/src/styles/scss/_common.scss
@@ -1122,7 +1122,7 @@ spaces
 .video-btn-wrapper {
   //background-color: #ff9800;
 
-  padding: 20px;
+  padding: 50px 10px 20px 10px;
   display: flex;
   justify-items: center;
   align-items: center;
